force-app/main/default/objects/Member_Ship__c/Member_Ship__c.object-meta.xml
<CustomObject>
    <description>It is used to Member Ship details</description>
    <label>Member Ship</label>
    <nameField>
        <displayFormat>MEM-{0000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Ships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>