force-app/main/default/objects/Member_Ship__c/fields/Active_Member_Ship__c.field-meta.xml
<CustomField>
    <fullName>Active_Member_Ship__c</fullName>
    <description>It is used to find who are all active member ship</description>
    <formula>Membership_End_Date__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Member Ship</label>
    <type>Checkbox</type>
</CustomField>