force-app/main/default/objects/Member_Ship__c/fields/Borrow_Limit__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Limit__c</fullName>
    <description>It is used to calculate the limit</description>
    <formula>IF( RecordType.Name  =  &quot;Student&quot;, 3 ,  IF(  ISPICKVAL(Borrow_Limit_Category__c , &quot;Standard&quot;)  , 4,  IF( ISPICKVAL(Borrow_Limit_Category__c , &quot;Extended&quot;) , 6, null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrow Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>