force-app/main/default/objects/Member_Ship__c/fields/Borrow_Limit_Category__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Limit_Category__c</fullName>
    <description>It is used to define Borrow Limit Category</description>
    <label>Borrow Limit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>