force-app/main/default/objects/Member_Ship__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>is used to find Expiry Data</description>
    <formula>Membership_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It show the Expiry Days</inlineHelpText>
    <label>Expiry Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>