force-app/main/default/objects/Member_Ship__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to relate Contact object and get member details from Contact</description>
    <label>Member Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Member Ships</relationshipLabel>
    <relationshipName>Member_Ships</relationshipName>
    <type>Lookup</type>
</CustomField>