force-app/main/default/objects/Member_Ship__c/fields/Membership_Plan__c.field-meta.xml
<CustomField>
    <fullName>Membership_Plan__c</fullName>
    <description>It is used to find which membership plan</description>
    <label>Membership Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>