force-app/main/default/objects/Member_Ship__c/fields/Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date__c</fullName>
    <description>It is used to store Membership Start Date</description>
    <label>Membership Start Date</label>
    <type>Date</type>
</CustomField>