force-app/main/default/objects/Member_Ship__c/fields/No_of_Books_Borrowed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Books_Borrowed__c</fullName>
    <description>It is used to count the Number of Books Borrowed.</description>
    <label>No of Books Borrowed</label>
    <summaryForeignKey>Borrow_Detail__c.Member_Ship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>