force-app/main/default/objects/Member_Ship__c/fields/Research_Area__c.field-meta.xml
<CustomField>
    <fullName>Research_Area__c</fullName>
    <description>It is used to define Research Area</description>
    <inlineHelpText>Helps library recommend books or journals related to the faculty&apos;s research.</inlineHelpText>
    <label>Research Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>