force-app/main/default/objects/Member_Ship__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <description>is used to enter Faculty details</description>
    <label>Faculty</label>
</RecordType>