force-app/main/default/objects/Member_Ship__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>is used to enter Student details</description>
    <label>Student</label>
</RecordType>