force-app/main/default/objects/Member_Ship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>No_of_Books_Borrowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>